Fix expand-collapse gradient issue - Add linear gradient vendor prefix

--- a/Bikewale.PWA.UI/stylesheet/components/_react-expand-collapse.sass
+++ b/Bikewale.PWA.UI/stylesheet/components/_react-expand-collapse.sass
@@ -21,6 +21,7 @@
     left: -20px
     width: 20px
     height: 100%
+    background: -webkit-linear-gradient(to right, transparent 0, color('white') 100%)
     background: linear-gradient(to right, transparent 0, color('white') 100%)
 
 /* expanded state */
